[gd_scene load_steps=21 format=2]

[ext_resource path="res://robot/Skin.gd" type="Script" id=1]
[ext_resource path="res://robot/robot_sprites.png" type="Texture" id=2]
[ext_resource path="res://robot/SpellHolder.gd" type="Script" id=3]
[ext_resource path="res://robot/pain_05.wav" type="AudioStream" id=4]
[ext_resource path="res://robot/ShakingCamera2D.gd" type="Script" id=5]
[ext_resource path="res://robot/Robot.gd" type="Script" id=6]
[ext_resource path="res://props/shadow/Shadow.tscn" type="PackedScene" id=7]
[ext_resource path="res://robot/death_03.wav" type="AudioStream" id=8]
[ext_resource path="res://spells/fire_rapid/SpellFireRapid.tscn" type="PackedScene" id=9]
[ext_resource path="res://robot/smoke.png" type="Texture" id=17]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Skin:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.474655, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skin:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skin:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Skin:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SmokeParticles:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shadow:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Shadow:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.356863 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "die"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Skin:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25, 0.3, 0.45 ),
"transitions": PoolRealArray( 0.297302, 2.63902, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.474655, 0 ), Vector2( -2.23807, 3.56457 ), Vector2( -0.474655, -41 ), Vector2( 0, -43 ), Vector2( 2.38419e-07, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.25, 0.3, 0.45 ),
"transitions": PoolRealArray( 0.297302, 2.63902, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 3.23486, 12.9395, -3.92767, -14.8661 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skin:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.25, 0.3, 0.45, 0.65 ),
"transitions": PoolRealArray( 0.297302, 2.63902, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.11499, 0.780799 ), Vector2( 0.718156, 1.88453 ), Vector2( 1.11825, 1.1026 ), Vector2( 1.63267, 0.0972684 ), Vector2( 2, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skin:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.45, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.831373, 0.117647, 0.235294, 1 ), Color( 1.66, 0.24, 0.48, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Skin:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SmokeParticles:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_disable"
} ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("SpellHolder")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_disable"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Shadow:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1, 0.65 ),
"transitions": PoolRealArray( 0.574349, 2.46229, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.14815, 0.783067 ), Vector2( 0.0617284, -0.0141093 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Shadow:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 0.65 ),
"transitions": PoolRealArray( 1, 1.46409, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.356863 ), Color( 1, 1, 1, 0.356863 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "hover"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skin:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( -0.474655, 0 ), Vector2( -0.474655, -8 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 34.0147

[sub_resource type="CircleShape2D" id=1]
radius = 25.02

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.083682, 0.171548, 0.544118, 0.872549 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0, 0.780392, 0.831373, 0.882353, 1, 0.572549, 0.560784, 0.721569, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 14 )

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 0.513245 ), 0.0, 0.0, 0, 0, Vector2( 0.237734, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.241722 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=16]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 150.0
damping_random = 0.5
scale = 0.5
scale_random = 0.5
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[node name="Robot" type="KinematicBody2D"]
collision_mask = 50
script = ExtResource( 6 )

[node name="Skin" type="Sprite" parent="."]
position = Vector2( -0.474655, 0 )
texture = ExtResource( 2 )
offset = Vector2( 0.474655, -40.5866 )
hframes = 3
vframes = 2
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Skin"]
root_node = NodePath("../..")
autoplay = "hover"
anims/RESET = SubResource( 5 )
anims/die = SubResource( 7 )
anims/hover = SubResource( 6 )

[node name="SpellHolder" type="Area2D" parent="."]
position = Vector2( 0, -36 )
collision_mask = 0
monitoring = false
script = ExtResource( 3 )
spell_scene = ExtResource( 9 )

[node name="SpellSpawningPoint" type="Position2D" parent="SpellHolder"]
position = Vector2( 77, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpellHolder"]
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
shape = SubResource( 1 )

[node name="ShakingCamera2D" type="Camera2D" parent="."]
position = Vector2( 0, -40.5866 )
current = true
script = ExtResource( 5 )

[node name="Shadow" parent="." instance=ExtResource( 7 )]
position = Vector2( -0.469136, 34.4444 )

[node name="SmokeParticles" type="Particles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 16
lifetime = 0.8
local_coords = false
process_material = SubResource( 16 )
texture = ExtResource( 17 )

[node name="DamageAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "SFX"
